fixing the alignment of features and skeleton

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ div.over2 {
 
 #figure {
 	overflow-x: hidden;
+	padding-left: 0px;
 }
 
 #featureList {
